--- a/app/views/members/validate_me.html.haml
+++ b/app/views/members/validate_me.html.haml
@@ -9,5 +9,5 @@
   .span-20
     %h2 Validation request sent to #{@member.name}
     %h3 A validation e-mail has been sent to #{@member.email}
-    %h3 When you receive the e-mail, click the confirmation.  As soon as your account is confirmed, you will start receiving notifications and be able to update your preferences.
+    %p When you receive the e-mail, click the confirmation.  As soon as your account is confirmed, you will start receiving notifications and be able to update your preferences.
 
