Enables proper club renewal dates, and starts club email

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -19,6 +19,9 @@
     .span-4#labeler Number
     %span.span-16.last.value= @club.club_number
   .span-20
+    .span-4#labeler First Club Date
+    %span.span-16.last.value= @club.plan_initial
+  .span-20
     .span-4#labeler Plan Renewal Date
     .span-16.last.value
     - if @club.billing_period
