--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -4,7 +4,7 @@
 .span-24
   .span-4#lead_box.club_background Pricing
   .span-20.last
-    %h2 TM Schedule Price plans are simple.  
+    %h2 TM Schedule Price plans are simple and the first 30 days are free.
     %p For a monthly, biannual or annual subscription, your club will get these benefits:
     .span-20.last
       .span-15.prepend-1.last
@@ -16,6 +16,7 @@
           %li E-mail support
     %h2 Rates
     %p You can pay monthly, but the farther you pay ahead, the more you will save.
+    %p Remember, we won't start billing until the first 30 days have past - try TM Schedule Risk free!  If you don't like it, deactivate your club and we won't charge you.
     .span-18.prepend-1.last
       %table.pricing
         %th Period
