Drops check marks -> single statement
Too complex.  Moving to Guest -> Member -> Officer and back again.  Way over thought this part and got lost in the weeds.  Need to start implementing testing.

--- a/app/views/members/_membership.html.haml
+++ b/app/views/members/_membership.html.haml
@@ -1,12 +1,4 @@
 %tr
   %td= link_to membership.club.name, club_path(membership.club)
-  %td
-    - if membership.is_guest 
-      = image_tag("check_mark_small.png") 
-  %td
-    - if membership.is_member
-      .image_center= image_tag("check_mark_small.png") 
-  %td
-    - if membership.is_officer
-      .image_center= image_tag("check_mark_small.png") 
+  %td= membership.to_s
   %td= link_to image_tag("change_member_button_small.png"), edit_membership_path(membership)
