--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -45,8 +45,6 @@
           %table
             %tr
               %th Club
-              %th Guest
-              %th Member
-              %th Officer
+              %th Membership
             %tr
               = render :partial => 'membership', :collection => @memberships
