--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -2,17 +2,19 @@
   = "Member - " + @member.name
 .span-4
   .span-4#lead_box.member_background Member
-  #action_box
-    .span-4= link_to image_tag("change_member_button.png"), edit_member_path(@member)
-    .span-4= link_to image_tag("add_member_button.png"), new_member_path()
+  - if current_user_is_officer
+    #action_box
+      .span-4= link_to image_tag("change_member_button.png"), edit_member_path(@member)
+      .span-4= link_to image_tag("add_member_button.png"), new_member_path()
 .span-20.last
   .span-20
     .span-20
       .span-4#labeler Name
       .value= @member.name
-    .span-20  
-      .span-4#labeler E-Mail
-      .value= @member.email
+    - if logged_in
+      .span-20  
+        .span-4#labeler E-Mail
+        .value= @member.email
     - if @member.validated_at
       .span-20  
         .span-4#labeler Validated On
