Adds Users and testing

--- a/app/views/welcome/newclub.html.haml
+++ b/app/views/welcome/newclub.html.haml
@@ -24,7 +24,7 @@
   %span.span-16
     %span.span-last#header_box 
       New member
-      = semantic_form_for ([@member]) do |f|
+      = semantic_form_for ([@user]) do |f|
         .span-10.append-7
           = f.inputs do
             =f.input :name, :as => :string, :label => 'Your name'
